src/objects/MCAR_Manufacturer__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enterprise_ID__c</fullName>
        <label>Enterprise ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Supplier_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Supplier Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_HQ_City__c</fullName>
        <label>City</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_HQ_Country__c</fullName>
        <label>Country</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_HQ_State__c</fullName>
        <label>State/Province</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_HQ_Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MCAR_HQ_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Supplier_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer Admin</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Nokia MCAR External Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Manufacturers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCAR_User_Account__c</fullName>
        <label>MCAR_User_Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_User_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MCAR_User_Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Manufacturer Name Ext Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierManagerPhone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SupplierManagerTitleRole__c</fullName>
        <label>SupplierManagerTitleRole</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierManagerTitle__c</fullName>
        <label>Title</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Manager_City__c</fullName>
        <label>City</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Manager_Country__c</fullName>
        <label>Country</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Manager__c</fullName>
        <label>Supplier Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Manufacturer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Enterprise_ID__c</columns>
        <columns>MCAR_Supplier_Admin__c</columns>
        <columns>Legacy_Supplier_Id__c</columns>
        <columns>MCAR_HQ_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Manufacturer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Manufacturer_Admin__c</fullName>
        <label>Manufacturer Admin</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
    </sharingReasons>
    <validationRules>
        <fullName>Name_Not_Editable</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( $Profile.Name =&quot;Nokia MCAR External Supplier&quot;,  ISCHANGED( Name ))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Supplier Cannot modify Name</errorMessage>
    </validationRules>
</CustomObject>